# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
